<resources>
    <string name="app_name">TheSiS</string>
    <string name="title">Title</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="subtitle">Subtitle</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password!</string>
    <string name="guest">Login As Guest!</string>
    <string name="logout">Log Out</string>
    <string name="keluar">Keluar</string>
    <string name="track">Track</string>
    <string name="home">Home</string>
    <string name="alarm">Alarm</string>
    <string name="help">Help</string>
    <string name="account">Account</string>
    <string name="e_mail">E-Mail</string>
    <string name="reset">Reset</string>
    <string name="dropdown">Dropdown</string>
    <string name="dashboard">Dashboard</string>
</resources>
