<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/Background">
    <LinearLayout
        android:id="@+id/login111"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@string/logo"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_logow"
            tools:srcCompat="@drawable/ic_logow"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login112"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login111"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="20dp"
            android:hint="@string/username"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/et_bg"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="35dp"
            android:background="@drawable/btn_bg"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/reset_password"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</RelativeLayout>