<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#355F67"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".Splash">

    <ImageView
        android:id="@string/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        android:gravity="center|center_vertical"
        app:srcCompat="@drawable/ic_logow" />

    <ImageView
        android:id="@string/title"
        android:layout_width="290dp"
        android:layout_height="133dp"
        android:contentDescription="@string/title"
        app:srcCompat="@drawable/title"
        android:layout_below="@string/logo"/>

    <ImageView
        android:id="@string/subtitle"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginBottom="135dp"
        android:contentDescription="@string/subtitle"
        android:layout_below="@string/title"
        app:srcCompat="@drawable/subtitle" />
</LinearLayout>