<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#177E89">
    <LinearLayout
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/reset_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_logow"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reset_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/reset"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/et_bg"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="20dp"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_guest"
            android:text="@string/reset"
            android:textColor="@android:color/black" />
    </LinearLayout>
</RelativeLayout>